# MadokaBot

./: .env.prod  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  docker-build.yml
assets/audio/poke/: Madoka - eh.m4a  Madoka - …能消停会儿吗？.m4a  Madoka - 什么事？.m4a  Madoka - 叹气.m4a  Madoka - 哈？什么….m4a  Madoka - 想死吗？.m4a  Madoka - 我不会再说第二遍.m4a  Madoka - 才不要.m4a  Madoka - 能闭嘴吗.m4a  Madoka - 诶？①.m4a  Madoka - （生气）.m4a
assets/data/nonebot_plugin_steam_info/: bind_data.json  parent_data.json  steam_info.json
madokabot/: madokabot.rar
madokabot/madoka_bundle/: __init__.py  config.py  constants.py  registry.py  utils.py
madokabot/madoka_bundle/assets/audio/poke/: Madoka - emm.m4a  Madoka - uhh.m4a  (+12 more)
madokabot/madoka_bundle/assets/data/: data.db
madokabot/madoka_bundle/db/: models.py  services.py  user_source.py
madokabot/madoka_bundle/plugins/ask_gemini/: __init__.py  config.py
madokabot/madoka_bundle/plugins/chat/: __init__.py  config.py
madokabot/madoka_bundle/plugins/common/: __init__.py  utils.py
madokabot/madoka_bundle/plugins/echo/: __init__.py  config.py
madokabot/madoka_bundle/plugins/pillow/: __init__.py
madokabot/madoka_bundle/plugins/poke/: __init__.py
madokabot/madoka_bundle/plugins/sign/: __init__.py  config.py  utils.py
madokabot/madoka_bundle/render/: __init__.py  config.py  utils.py
madokabot/madoka_bundle/render/template/: daily_sign.html  daily_sign_backup.html
madokabot/steam_info_main/: __init__.py  config.py  data_source.py  models.py  steam.py  utils.py
(+4 files in other folders)
